--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -40,10 +40,25 @@ a:hover {
 }
 
 /* Layout Styles */
+img {
+    max-width: 50%;
+    max-height: 50%;
+    object-fit: contain;
+}
+
 .card {
     background-color: #fff;
     border-radius: 10px;
     padding: 5px 5px;
+    margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+}
+
+.name-card {
+
+}
+
+.headshot-card {
+
 }
