--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -48,26 +48,62 @@ img {
 
 .name-card {
     grid-area: name;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .headshot-card {
     grid-area: headshot;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .bio-card {
     grid-area: bio;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .projects-card {
     grid-area: projects;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .articles-card {
     grid-area: articles;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .socials-card {
     grid-area: socials;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .cards {
@@ -77,13 +113,9 @@ img {
         'headshot bio bio bio'
         'projects projects articles articles'
         'socials socials socials socials';
+    grid-auto-rows: minmax(100px, auto);
 }
 
 .card {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 5px 5px;
-    margin: 20px;
-    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+  
 }
