--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -7,26 +7,43 @@
     --font-primary: 'Montserrat', sans-serif;
     --font-secondary: 'Inter', sans-serif;
 
-    --base-font-size: 1rem;
-    --h1-font-size: 4rem;
-    --h2-font-size: 1.75rem;
-    --h3-font-size: 1.5rem;
+    --base-font-size: 2.3vw;
+    --h1-font-size: 4vw;
+    --h2-font-size: 3vw;
+    --h3-font-size: 2vw;
 }
 
 body {
     background-image: url(../images/johny-goerend-U_diPCXCBxU-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
     font: var(--base-font-size) / 1.6 var(--font-primary);
 }
 
 /* Base Element Styles */
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h2 {
+    font-family: var(--font-primary);
+    text-transform: capitalize;
+}
+
+h1 {
+    font-size: var(--h1-font-size);
+}
+
+h2 {
+    font-size: var(--h2-font-size)
+}
+
+h3 {
     font-family: var(--font-secondary);
     text-transform: capitalize;
+
+    font-size: var(--h3-font-size);
+}
+
+.color-text {
+    color: var(--primary-color);
 }
 
 a {
@@ -41,8 +58,8 @@ a:hover {
 
 /* Layout Styles */
 img {
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: contain;
 }
 
@@ -54,6 +71,8 @@ img {
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+
+    text-align: center;
 }
 
 .headshot-card {
@@ -74,6 +93,8 @@ img {
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+
+    text-align: center;
 }
 
 .projects-card {
@@ -84,6 +105,8 @@ img {
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+
+    text-align: center;
 }
 
 .articles-card {
@@ -94,6 +117,8 @@ img {
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+
+    text-align: center;
 }
 
 .socials-card {
@@ -104,15 +129,18 @@ img {
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
+
+    text-align: center;
 }
 
 .cards {
     display: grid;
     grid-template-areas: 
-        'name bio bio bio'
-        'headshot bio bio bio'
-        'projects projects articles articles'
-        'socials socials socials socials';
+        'name name bio bio bio bio'
+        'headshot headshot bio bio bio bio'
+        'headshot headshot bio bio bio bio'
+        'projects projects projects articles articles articles'
+        'socials socials socials socials socials socials';
     grid-auto-rows: minmax(100px, auto);
 }
 
