--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -57,16 +57,10 @@ a:hover {
 }
 
 /* Layout Styles */
-img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-}
-
 .name-card {
     grid-area: name;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 5px 5px;
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
@@ -78,17 +72,29 @@ img {
 .headshot-card {
     grid-area: headshot;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 5px 5px;
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
 
+.headshot-card img {
+    display: block;
+    border-radius: 8px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
+    max-height: 90%;
+    object-fit: contain;
+}
+
 .bio-card {
     grid-area: bio;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 5px 5px;
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
@@ -100,7 +106,7 @@ img {
 .projects-card {
     grid-area: projects;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 5px 5px;
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
@@ -112,7 +118,7 @@ img {
 .articles-card {
     grid-area: articles;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 5px 5px;
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
@@ -124,7 +130,7 @@ img {
 .socials-card {
     grid-area: socials;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     padding: 5px 5px;
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
