--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -82,8 +82,8 @@ a:hover {
 .headshot-card img {
     display: block;
     border-radius: 8px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
     max-width: 90%;
