--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -81,14 +81,11 @@ a:hover {
 }
 
 .headshot-card img {
+    max-width: 100%;
+    max-height: 100%;
     display: block;
     border-radius: 8px;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 90%;
-    max-height: 90%;
+    margin: 0 auto;
     object-fit: contain;
 }
 
