--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -147,6 +147,16 @@ a:hover {
     margin-right: 10px;
 }
 
+.footer-card {
+    grid-area: footer;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
 .cards {
     display: grid;
     grid-template-areas: 
@@ -154,6 +164,7 @@ a:hover {
         'headshot headshot bio bio bio bio'
         'headshot headshot bio bio bio bio'
         'projects projects projects articles articles articles'
-        'socials socials socials socials socials socials';
+        'socials socials socials socials socials socials'
+        'footer footer footer footer footer footer';
     grid-auto-rows: minmax(100px, auto);
 }
