--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -157,6 +157,30 @@ a:hover {
     transition: 0.3s;
 }
 
+footer {
+    display: flex;
+    justify-content: space-between;
+    vertical-align: middle;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    vertical-align: middle;
+}
+
+.column form {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    vertical-align: middle;
+    gap: 10px;
+}
+
 .cards {
     display: grid;
     grid-template-areas: 
