created resume html file and incorporated it into css

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -147,6 +147,18 @@ a:hover {
     margin-right: 10px;
 }
 
+.resume-card {
+    grid-area: resume;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 5px 5px;
+    margin: 20px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+
+    text-align: center;
+}
+
 .footer-card {
     grid-area: footer;
     background-color: #fff;
@@ -190,5 +202,17 @@ footer {
         'projects projects projects articles articles articles'
         'socials socials socials socials socials socials'
         'footer footer footer footer footer footer';
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.resume-cards {
+    display: grid;
+    grid-template-areas: 
+        'resume resume'
+        'resume resume'
+        'resume resume'
+        'resume resume'
+        'resume resume'
+        'footer footer';
     grid-auto-rows: minmax(100px, auto);
 }
