--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -18,6 +18,7 @@ body {
     background-size: cover;
     background-position: center;
     font: var(--base-font-size) / 1.6 var(--font-primary);
+    margin: 5rem;
 }
 
 /* Base Element Styles */
