--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -152,12 +152,12 @@ a:hover {
     grid-area: resume;
     background-color: #fff;
     border-radius: 8px;
-    padding: 5px 5px;
+    padding: 20px 20px;
     margin: 20px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 
-    text-align: center;
+    text-align: left;
 }
 
 .footer-card {
@@ -216,4 +216,8 @@ footer {
         'resume resume'
         'footer footer';
     grid-auto-rows: minmax(100px, auto);
+}
+
+.ender {
+    font-size: 1.5vw;
 }
