--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -221,3 +221,22 @@ footer {
 .ender {
     font-size: 1.5vw;
 }
+
+@media only screen and (max-width: 320px) {
+    .cards {
+        display: grid;
+        grid-template-areas: 
+            'name'
+            'headshot'
+            'bio'
+            'projects'
+            'articles'
+            'socials'
+            'footer';
+        grid-auto-rows: minmax(100px, auto);
+    }
+
+    body {
+        margin: auto;
+    }
+}
